# carrot

./: .gitignore  .pre-commit-config.yaml  README.md  example.ipynb  pyproject.toml  requirements.txt
src/carrot/: animals.csv  diet_safety.py
src/config_example/: __init__.py  app.py  app2.py  cli.py  config stuff.md  shared.py  web.py
tests/carrot/: __init__.py  test_diet_safety.py
