[project]
name = "carrot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4"
authors = [{ name = "circleci", email = "kgrid-developers@umich.edu" }]
dependencies = [
    "typer>=0.16.0,<0.17.0",
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.2,<0.35.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "click>=8.2.1,<9.0.0",
    "polars>=1.33.1,<2.0.0",
]

[project.scripts]
carrot = "carrot.cli:cli"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["carrot*"]

[tool.poe.tasks]
# hooks = "pre-commit install"
hello = "echo Hello, World!"
goodbye = "echo Goodbye, World!"
hooks = "pre-commit install"
setup = ["hello", "goodbye", "hooks"]


[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16,<1.0.0",
]
